[package]
name = "deon_protcol"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["use-std"] }
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }
rand = "0.8"
thiserror = "1.0"
zeroize = { version = "1.7", features = ["derive"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
bytes = "1.5"
sha2 = "0.10"
hkdf = "0.12"
crc32fast = "1.3"
