[package]
name = "deon_protocol"
version = "1.3.0"
edition = "2024"
repository = "https://github.com/brzb0/Deon-Protocol"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["use-std"] }
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }
rand = "0.8"
thiserror = "1.0"
zeroize = { version = "1.7", features = ["derive"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
bytes = "1.5"
sha2 = "0.10"
hkdf = "0.12"
crc32fast = "1.3"
argon2 = "0.5"
spake2 = "0.4"
chrono = "0.4"
dashmap = "5.5" # For in-memory rate limiting/banning
base64 = "0.21"
